[package]
name = "layer-4-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-std", "io-util", "tracing"] }
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0" }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
